tests/suite/checker/errors/adjust/cannot_load.kind2
Main : U60
Main = 
  let k = 2
  match U60 k {
    s => ?
  }